# pelican-frontmark

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  bumpr.rc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
frontmark/: __about__.py  __init__.py  reader.py  signals.py
pelican/plugins/frontmark/: __about__.py  __init__.py  reader.py  signals.py
tests/: test_reader.py
tests/data/: highlight-unknown.md  highlight.md  hr-start.md  hr.md  links.md  markdown-only.md  meta-only.md  metadata.md  multiline.md  page.md  title-from-markdown.md  types.md
